fixed out-of-bounds number wrapping

--- a/src/styles/globals.scss
+++ b/src/styles/globals.scss
@@ -38,7 +38,7 @@ body {
     @include colorScreen;
 
     .calculator {
-        max-width: 300px;
+        max-width: 17rem;
         display: flex;
         flex-direction: column;
         align-items: center;
@@ -69,6 +69,8 @@ body {
             flex-direction: column;
             justify-content: space-between;
             padding: 1rem;
+            word-wrap: break-word;
+            word-break: break-all;
 
             .previous {
                 all:unset;
